[gd_scene load_steps=2 format=3 uid="uid://c30t614sfv2ce"]

[ext_resource type="Script" path="res://auth_pages/signup.gd" id="1_nlhhu"]

[node name="Signup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nlhhu")

[node name="StateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -545.0
offset_top = -277.0
offset_right = 545.0
offset_bottom = -215.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Sign Up"
horizontal_alignment = 1

[node name="EmailLineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.0
offset_top = -194.0
offset_right = 409.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Email"
alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.0
offset_top = -114.0
offset_right = 409.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Password"
alignment = 1

[node name="PasswordLineEdit2" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.0
offset_top = -38.0
offset_right = 409.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter Password Again"
alignment = 1

[node name="SignUpButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = 56.0
offset_right = 166.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Sign Up"

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = 206.0
offset_right = 166.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Return to Login"

[connection signal="pressed" from="SignUpButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
